Commented out unused font weights, added header search files, changed inter font weights

--- a/source/themes/custom/crescenttool/styles/fonts/_font-industry.scss
+++ b/source/themes/custom/crescenttool/styles/fonts/_font-industry.scss
@@ -67,49 +67,49 @@
 /* @import must be at top of file, otherwise CSS will not work */
 @import url('//hello.myfonts.net/count/374ac0');
 
-@font-face {
-  font-family: 'Industry';
-  src: url('/themes/custom/crescenttool/fonts/industry/374AC0_0_0.eot');
-  src: url('/themes/custom/crescenttool/fonts/industry/374AC0_0_0.eot?#iefix') format('embedded-opentype'),
-  url('/themes/custom/crescenttool/fonts/industry/374AC0_0_0.woff2') format('woff2'),
-  url('/themes/custom/crescenttool/fonts/industry/374AC0_0_0.woff') format('woff'),
-  url('/themes/custom/crescenttool/fonts/industry/374AC0_0_0.ttf') format('truetype');
-  font-weight: 900;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Industry';
-  src: url('/themes/custom/crescenttool/fonts/industry/374AC0_5_0.eot');
-  src: url('/themes/custom/crescenttool/fonts/industry/374AC0_5_0.eot?#iefix') format('embedded-opentype'),
-  url('/themes/custom/crescenttool/fonts/industry/374AC0_5_0.woff2') format('woff2'),
-  url('/themes/custom/crescenttool/fonts/industry/374AC0_5_0.woff') format('woff'),
-  url('/themes/custom/crescenttool/fonts/industry/374AC0_5_0.ttf') format('truetype');
-  font-weight: 900;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: 'Industry';
-  src: url('/themes/custom/crescenttool/fonts/industry/374AC0_3_0.eot');
-  src: url('/themes/custom/crescenttool/fonts/industry/374AC0_3_0.eot?#iefix') format('embedded-opentype'),
-  url('/themes/custom/crescenttool/fonts/industry/374AC0_3_0.woff2') format('woff2'),
-  url('/themes/custom/crescenttool/fonts/industry/374AC0_3_0.woff') format('woff'),
-  url('/themes/custom/crescenttool/fonts/industry/374AC0_3_0.ttf') format('truetype');
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Industry';
-  src: url('/themes/custom/crescenttool/fonts/industry/374AC0_4_0.eot');
-  src: url('/themes/custom/crescenttool/fonts/industry/374AC0_4_0.eot?#iefix') format('embedded-opentype'),
-  url('/themes/custom/crescenttool/fonts/industry/374AC0_4_0.woff2') format('woff2'),
-  url('/themes/custom/crescenttool/fonts/industry/374AC0_4_0.woff') format('woff'),
-  url('/themes/custom/crescenttool/fonts/industry/374AC0_4_0.ttf') format('truetype');
-  font-weight: 700;
-  font-style: italic;
-}
+//@font-face {
+//  font-family: 'Industry';
+//  src: url('/themes/custom/crescenttool/fonts/industry/374AC0_0_0.eot');
+//  src: url('/themes/custom/crescenttool/fonts/industry/374AC0_0_0.eot?#iefix') format('embedded-opentype'),
+//  url('/themes/custom/crescenttool/fonts/industry/374AC0_0_0.woff2') format('woff2'),
+//  url('/themes/custom/crescenttool/fonts/industry/374AC0_0_0.woff') format('woff'),
+//  url('/themes/custom/crescenttool/fonts/industry/374AC0_0_0.ttf') format('truetype');
+//  font-weight: 900;
+//  font-style: normal;
+//}
+//
+//@font-face {
+//  font-family: 'Industry';
+//  src: url('/themes/custom/crescenttool/fonts/industry/374AC0_5_0.eot');
+//  src: url('/themes/custom/crescenttool/fonts/industry/374AC0_5_0.eot?#iefix') format('embedded-opentype'),
+//  url('/themes/custom/crescenttool/fonts/industry/374AC0_5_0.woff2') format('woff2'),
+//  url('/themes/custom/crescenttool/fonts/industry/374AC0_5_0.woff') format('woff'),
+//  url('/themes/custom/crescenttool/fonts/industry/374AC0_5_0.ttf') format('truetype');
+//  font-weight: 900;
+//  font-style: italic;
+//}
+//
+//@font-face {
+//  font-family: 'Industry';
+//  src: url('/themes/custom/crescenttool/fonts/industry/374AC0_3_0.eot');
+//  src: url('/themes/custom/crescenttool/fonts/industry/374AC0_3_0.eot?#iefix') format('embedded-opentype'),
+//  url('/themes/custom/crescenttool/fonts/industry/374AC0_3_0.woff2') format('woff2'),
+//  url('/themes/custom/crescenttool/fonts/industry/374AC0_3_0.woff') format('woff'),
+//  url('/themes/custom/crescenttool/fonts/industry/374AC0_3_0.ttf') format('truetype');
+//  font-weight: 700;
+//  font-style: normal;
+//}
+//
+//@font-face {
+//  font-family: 'Industry';
+//  src: url('/themes/custom/crescenttool/fonts/industry/374AC0_4_0.eot');
+//  src: url('/themes/custom/crescenttool/fonts/industry/374AC0_4_0.eot?#iefix') format('embedded-opentype'),
+//  url('/themes/custom/crescenttool/fonts/industry/374AC0_4_0.woff2') format('woff2'),
+//  url('/themes/custom/crescenttool/fonts/industry/374AC0_4_0.woff') format('woff'),
+//  url('/themes/custom/crescenttool/fonts/industry/374AC0_4_0.ttf') format('truetype');
+//  font-weight: 700;
+//  font-style: italic;
+//}
 
 @font-face {
   font-family: 'Industry';
@@ -176,25 +176,25 @@
   font-weight: 400;
   font-style: italic;
 }
-
-@font-face {
-  font-family: 'Industry';
-  src: url('/themes/custom/crescenttool/fonts/industry/374AC0_9_0.eot');
-  src: url('/themes/custom/crescenttool/fonts/industry/374AC0_9_0.eot?#iefix') format('embedded-opentype'),
-  url('/themes/custom/crescenttool/fonts/industry/374AC0_9_0.woff2') format('woff2'),
-  url('/themes/custom/crescenttool/fonts/industry/374AC0_9_0.woff') format('woff'),
-  url('/themes/custom/crescenttool/fonts/industry/374AC0_9_0.ttf') format('truetype');
-  font-weight: 300;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Industry';
-  src: url('/themes/custom/crescenttool/fonts/industry/374AC0_8_0.eot');
-  src: url('/themes/custom/crescenttool/fonts/industry/374AC0_8_0.eot?#iefix') format('embedded-opentype'),
-  url('/themes/custom/crescenttool/fonts/industry/374AC0_8_0.woff2') format('woff2'),
-  url('/themes/custom/crescenttool/fonts/industry/374AC0_8_0.woff') format('woff'),
-  url('/themes/custom/crescenttool/fonts/industry/374AC0_8_0.ttf') format('truetype');
-  font-weight: 300;
-  font-style: italic;
-}
+//
+//@font-face {
+//  font-family: 'Industry';
+//  src: url('/themes/custom/crescenttool/fonts/industry/374AC0_9_0.eot');
+//  src: url('/themes/custom/crescenttool/fonts/industry/374AC0_9_0.eot?#iefix') format('embedded-opentype'),
+//  url('/themes/custom/crescenttool/fonts/industry/374AC0_9_0.woff2') format('woff2'),
+//  url('/themes/custom/crescenttool/fonts/industry/374AC0_9_0.woff') format('woff'),
+//  url('/themes/custom/crescenttool/fonts/industry/374AC0_9_0.ttf') format('truetype');
+//  font-weight: 300;
+//  font-style: normal;
+//}
+//
+//@font-face {
+//  font-family: 'Industry';
+//  src: url('/themes/custom/crescenttool/fonts/industry/374AC0_8_0.eot');
+//  src: url('/themes/custom/crescenttool/fonts/industry/374AC0_8_0.eot?#iefix') format('embedded-opentype'),
+//  url('/themes/custom/crescenttool/fonts/industry/374AC0_8_0.woff2') format('woff2'),
+//  url('/themes/custom/crescenttool/fonts/industry/374AC0_8_0.woff') format('woff'),
+//  url('/themes/custom/crescenttool/fonts/industry/374AC0_8_0.ttf') format('truetype');
+//  font-weight: 300;
+//  font-style: italic;
+//}
