--- a/source/themes/custom/gearwrench/styles/libraries/node/tile--product-listing.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/node/tile--product-listing.scss
@@ -13,12 +13,19 @@
 /**
  * Component
  */
+
 .node--type-product-listing.node--view-mode-tile {
-  .node__product-listing-grid-image {
-    img {
+  .node__product-listing-grid-image .field--name-field-media .media {
+    picture {
       width: 100%;
-      height: auto;
+      height: 100%;
+      display: flex;
+    }
+
+    picture img {
       object-fit: cover;
+      height: auto;
+      width: 100%;
     }
   }
 
@@ -66,3 +73,4 @@
     }
   }
 }
+
