--- a/source/themes/custom/gearwrench/styles/libraries/node/full--page.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/node/full--page.scss
@@ -13,71 +13,79 @@
 /**
  * Component
  */
-.node--type-page.node--view-mode-full .node__content {
-
-  .page-heading {
-    @include flex();
-    flex-flow: row wrap;
-    margin-bottom: 3rem;
-
-    @include media('>=lg') {
-      margin-bottom: 2rem;
-    }
-
-    .heading-left {
-      flex: 0 0 100%;
+.node--type-page.node--view-mode-full {
+  .node__content {
+    & > .page-heading {
+      @include flex();
+      flex-flow: row wrap;
       margin-bottom: 3rem;
 
       @include media('>=lg') {
-        flex: 3;
-        margin-bottom: 0;
-        padding-right: 50px;
+        margin-bottom: 2rem;
       }
-    }
 
-    .heading-right {
-      flex: 0 0 100%;
+      .heading-left {
+        flex: 0 0 100%;
+        margin-bottom: 3rem;
 
-      @include media('>=lg') {
-        flex: 1;
+        @include media('>=lg') {
+          flex: 3;
+          margin-bottom: 0;
+          padding-right: 50px;
+        }
       }
-    }
-  }
 
-  .field--name-field-link {
-    text-align: center;
+      .heading-right {
+        flex: 0 0 100%;
 
-    a {
-      @include btn();
-    }
-  }
-
-  .field--name-field-media {
-    @include container-full-width();
-    margin-bottom: 3rem;
-
-    .media {
-      height: 500px;
-
-      picture {
-        width: 100%;
-        height: 100%;
-        display: flex;
-
-        img {
-          object-fit: cover;
-          height: auto;
-          width: 100%;
+        @include media('>=lg') {
+          flex: 1;
         }
       }
     }
-  }
 
-  & > .paragraph-component {
-    margin-top: $gap-vertical-md;
+    & > .field--name-field-link {
+      text-align: center;
 
-    @include media('>=md') {
-      margin-top: $gap-vertical-md-plus;
+      a {
+        @include btn();
+      }
+    }
+
+    & > .field--name-field-media {
+      @include container-full-width();
+      margin-bottom: 3rem;
+
+      .media--video {
+        iframe {
+          width: 100%;
+          height: 100%;
+        }
+      }
+
+      .media {
+        height: 500px;
+
+        picture {
+          width: 100%;
+          height: 100%;
+          display: flex;
+
+          img {
+            object-fit: cover;
+            height: auto;
+            width: 100%;
+          }
+        }
+      }
+    }
+
+    & > .paragraph-component {
+      margin-top: $gap-vertical-md;
+
+      @include media('>=md') {
+        margin-top: $gap-vertical-md-plus;
+      }
     }
   }
 }
