--- a/docroot/themes/custom/gearwrench/templates/node/node--product-category--full.html.twig
+++ b/docroot/themes/custom/gearwrench/templates/node/node--product-category--full.html.twig
@@ -71,17 +71,33 @@
 {% set classes = [] %}
 
 <article{{ attributes.addClass(classes) }}>
-  <div{{ inner_attributes }}>
-    <div{{ content_attributes.addClass('node__content') }}>
-      <a href="{{ url }}" rel="bookmark">
-        <div{{ media_attributes }}>
-          {{ content }}
-        </div>
-        <div class="btn node__product-listing-grid-title">
-          {{ label }}
-        </div>
-      </a>
-    </div>
 
+  {{ title_prefix }}
+  {% if not page %}
+    <header{{ title_attributes }}>
+      <h3>
+        <a href="{{ url }}" rel="bookmark">{{ label }}</a>
+      </h3>
+    </header>
+  {% endif %}
+  {{ title_suffix }}
+
+  <div{{ content_attributes }}>
+    {{ content }}
+    <div class="product-category-view-section">
+      {{ filters }}
+      {{ view }}
+    </div>
   </div>
+
+  {% if display_submitted %}
+    <footer{{ footer_attributes }}>
+      {{ author_picture }}
+      <div{{ author_attributes.addClass('node__submitted') }}>
+        {% trans %}Submitted by {{ author_name }} on {{ date }}{% endtrans %}
+        {{ metadata }}
+      </div>
+    </footer>
+  {% endif %}
+
 </article>
