--- a/source/themes/custom/gearwrench/styles/libraries/view/product-category-grid.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/view/product-category-grid.scss
@@ -1,7 +1,7 @@
 @charset 'UTF-8';
 
 // -----------------------------------------------------------------------------
-// Libraries/View: Product Listing Grid
+// Libraries/View: Product Category Grid
 // -----------------------------------------------------------------------------
 
 /**
