--- a/source/themes/custom/gearwrench/styles/libraries/view/product-listing-grid.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/view/product-listing-grid.scss
@@ -1,7 +1,7 @@
 @charset 'UTF-8';
 
 // -----------------------------------------------------------------------------
-// Libraries/View: Product Listing Grid
+// Libraries/View: Product Category Grid
 // -----------------------------------------------------------------------------
 
 /**
@@ -14,7 +14,7 @@
  * View
  */
 
-.view-product-listing-grid {
+.view-product-category-grid {
   .view-content {
     display: grid;
     grid-template-columns: repeat(2, minmax(0, 1fr));
