Fix basic page buttons

--- a/source/themes/custom/gearwrench/styles/libraries/node/full--page.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/node/full--page.scss
@@ -15,7 +15,7 @@
  */
 .node--type-page.node--view-mode-full {
   .node__content {
-    & > .page-heading {
+    .page-heading {
       @include flex();
       flex-flow: row wrap;
       margin-bottom: 3rem;
@@ -44,7 +44,7 @@
       }
     }
 
-    & > .field--name-field-link {
+    .field--name-field-link {
       text-align: center;
 
       a {
