Updated header and typography font weight and transform, added featured tools after icon, Changed featured tools heading text, Changed case of search text, added eu url, added search block

--- a/docroot/modules/custom/crescenttool_core/templates/block--header-search.html.twig
+++ b/docroot/modules/custom/crescenttool_core/templates/block--header-search.html.twig
@@ -40,7 +40,7 @@
 
   <div{{ content_attributes.setAttribute('id', 'header-search--content') }}>
     <form action="/search" method="GET">
-      <input type="text" name="search" placeholder="{{ 'Search CRESCENTTOOL.com'|t }}" />
+      <input type="text" name="search" placeholder="{{ 'Search CrescentTool.com'|t }}" />
     </form>
   </div>
 
