--- a/docroot/themes/custom/crescenttool/templates/menu/menu--can-expand--main--block-header-menu-main.twig
+++ b/docroot/themes/custom/crescenttool/templates/menu/menu--can-expand--main--block-header-menu-main.twig
@@ -105,7 +105,7 @@ We call a macro which calls itself to render the full tree.
                   <div class="featured-tools-menu__content-container">
                     <div class="featured-tools-menu__menu-wrapper">
                       <header class="menu-item__panel-header">
-                        <h5>{{ 'Featured Tools'|t }}</h5>
+                        <h5>{{ 'Featured'|t }}</h5>
                       </header>
                       {{ featured_tools }}
                     </div>
