--- a/docroot/modules/custom/crescenttool_core/templates/block--country-switch.html.twig
+++ b/docroot/modules/custom/crescenttool_core/templates/block--country-switch.html.twig
@@ -42,7 +42,7 @@
     <ul class="menu">
       <li class="menu-item"><a href="/" class="menu-item__link">United States</a></li>
       <li class="menu-item"><a href="{{ content.australia_url }}" target="_blank" class="menu-item__link">Australia</a></li>
-      <li class="menu-item"><a href="{{ content.mexico_url }}" target="_blank" class="menu-item__link">Mexico</a></li>
+      <li class="menu-item"><a href="{{ content.eu_url }}" target="_blank" class="menu-item__link">EU</a></li>
     </ul>
   </div>
 
