--- a/source/themes/custom/gearwrench/styles/libraries/region/footer.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/region/footer.scss
@@ -166,8 +166,8 @@ $footer-bp-mobile: '<sm';
         width: 100%;
 
         &:hover {
-          background-color: $primary-orange;
-          color: $black;
+          background-color: $gray-90;
+          color: $white;
         }
 
         &:disabled {
