changed CT icon width variable name, updated GW form configs made fields required, email field removed disabled conditions

--- a/source/themes/custom/crescenttool/styles/base/_inputs.scss
+++ b/source/themes/custom/crescenttool/styles/base/_inputs.scss
@@ -35,7 +35,7 @@ textarea.form-textarea.webform-counter-warning,
 }
 
 select {
-  padding-right: $icon-width;
+  padding-right: $input-height;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden !important;
