Social Feed Setup, Content Type, Set up ultimate Cron, Hopefully fixed Product Category Views, Delete some unnecessary options for masonry modes, configured featured media components.

--- a/source/themes/custom/gearwrench/styles/libraries/node/full.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/node/full.scss
@@ -21,5 +21,9 @@
     @include media('>=md') {
       margin-top: $gap-vertical-md-plus;
     }
+
+    &:last-of-type {
+      margin-bottom: 5rem;
+    }
   }
 }
