--- a/source/themes/custom/gearwrench/styles/libraries/paragraph/full--featured-media--layout-full.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/paragraph/full--featured-media--layout-full.scss
@@ -26,6 +26,11 @@
   }
 
   .media--type-image {
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: auto;
+    }
     @include media('<=sm') {
       @include container-full-width;
     }
