--- a/source/themes/custom/gearwrench/styles/libraries/node/teaser--product.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/node/teaser--product.scss
@@ -39,7 +39,7 @@
       @include media('<md') {
         height: 160px;
         padding-top: 0;
-        outline: 2px solid $primary-orange;
+        border: 2px solid $primary-orange;
       }
 
       .media {
