GW: updated check box focus color, added focus to email signup button

--- a/source/themes/custom/gearwrench/styles/base/_inputs.scss
+++ b/source/themes/custom/gearwrench/styles/base/_inputs.scss
@@ -220,7 +220,7 @@ $active-gap: 8px; // the math likes px values
 
   input[type='checkbox']:not(:checked):focus + label:before,
   input[type='checkbox']:checked:focus + label:before {
-    border: 1px solid $primary-orange;
+    border: 1px solid $black;
   }
 
   .required-icon {
