--- a/source/themes/custom/gearwrench/styles/libraries/region/footer.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/region/footer.scss
@@ -165,7 +165,8 @@ $footer-bp-mobile: '<sm';
         color: $white;
         width: 100%;
 
-        &:hover {
+        &:hover,
+        &:focus {
           background-color: $gray-90;
           color: $white;
         }
