CT & GW: changed content callout to full width container and fixed features media layout full width container include

--- a/source/themes/custom/crescenttool/styles/libraries/paragraph/full--content-callout.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/paragraph/full--content-callout.scss
@@ -13,6 +13,11 @@
 /**
  * Component
  */
+
+.component-content-callout-container {
+  @include container-full-width();
+}
+
 .component-content-callout-container__content {
   display: flex;
   flex-direction: column;
