--- a/source/themes/custom/crescenttool/styles/libraries/paragraph/full--featured-media--layout-full.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/paragraph/full--featured-media--layout-full.scss
@@ -27,7 +27,7 @@
 
   .media--type-image {
     @include media('<=sm') {
-      @include container-full-width;
+      @include container-full-width();
     }
   }
 
