--- a/source/themes/custom/gearwrench/styles/libraries/paragraph/full--featured-media--layout-full.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/paragraph/full--featured-media--layout-full.scss
@@ -32,7 +32,7 @@
       height: auto;
     }
     @include media('<=sm') {
-      @include container-full-width;
+      @include container-full-width();
     }
   }
 
