--- a/source/themes/custom/gearwrench/styles/libraries/paragraph/full--content-callout.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/paragraph/full--content-callout.scss
@@ -13,6 +13,11 @@
 /**
  * Component
  */
+
+.component-content-callout-container {
+  @include container-full-width();
+}
+
 .component-content-callout-container__content {
   display: flex;
   flex-direction: column;
