--- a/source/themes/custom/gearwrench/styles/libraries/paragraph/full--featured-media--layout-slider.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/paragraph/full--featured-media--layout-slider.scss
@@ -97,7 +97,7 @@
       list-style: none;
 
       &.swiper-slide .media {
-        height: 100%;
+        height: 40.1vw;
         margin-bottom: 0;
         margin-top: 0;
         max-width: 100vw;
