--- a/source/themes/custom/crescenttool/styles/libraries/paragraph/full--featured-media--layout-slider.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/paragraph/full--featured-media--layout-slider.scss
@@ -37,7 +37,7 @@
     margin-bottom: 3.5rem;
 
     &.swiper-slide .media {
-      height: 100%;
+      height: 40.1vw;
       margin-bottom: 0;
       margin-top: 0;
       max-width: 100vw;
