--- a/source/themes/custom/gearwrench/styles/libraries/paragraph/full--featured-media--layout-slider.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/paragraph/full--featured-media--layout-slider.scss
@@ -108,6 +108,7 @@
           display: block;
           height: 100%;
           max-width: 100%;
+          object-fit: cover;
           width: 100%;
         }
       }
