--- a/source/themes/custom/gearwrench/styles/libraries/paragraph/full--featured-media--layout-slider.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/paragraph/full--featured-media--layout-slider.scss
@@ -97,18 +97,22 @@
       list-style: none;
 
       &.swiper-slide .media {
-        height: 40.1vw;
+        height: 0;
         margin-bottom: 0;
         margin-top: 0;
         max-width: 100vw;
         position: relative;
+        padding-bottom: 56.25%;
 
         .media__image,
-        .media__iframe {
+        .media__iframe,
+        img,
+        iframe {
           display: block;
           height: 100%;
           max-width: 100%;
           object-fit: cover;
+          position: absolute;
           width: 100%;
         }
       }
