changed footer phone to clickable link

--- a/docroot/modules/custom/gearwrench_core/templates/block--footer-navigation-block.html.twig
+++ b/docroot/modules/custom/gearwrench_core/templates/block--footer-navigation-block.html.twig
@@ -31,7 +31,7 @@
         <div class="block-footer-navigation-block__footer-address">
           <p>Address and Shipping</p>
           <p>City, State Zip Code</p>
-          <p>888-888-888</p>
+          <p><a href="tel:888-888-888">888-888-888</a></p>
         </div>
         <div class="block-footer-navigation-block__footer-social-menu-wrapper">
           {{ content.social_menu }}
