VYRKCATG-143: Added styles for product search results.

--- a/docroot/themes/custom/gearwrench/templates/node/node--product--search-index.html.twig
+++ b/docroot/themes/custom/gearwrench/templates/node/node--product--search-index.html.twig
@@ -100,6 +100,6 @@
         </div>
       </a>
     </div>
-    <div class="btn node__buy-now-button ps-widget" ps-sku="{{sku}}"></div>
+    <div class="btn node__buy-now-button ps-widget" ps-sku="{{sku}}">{{ 'Buy Now'|t }}</div>
   </div>
 </article>
