--- a/source/themes/custom/gearwrench/styles/libraries/node/search-index--product.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/node/search-index--product.scss
@@ -65,9 +65,14 @@
         min-height: rem(120px);
       }
 
+      .media {
+        height: 241px;
+      }
+
       .field--name-field-long-description {
         @include type-header(h4, black, included);
-        margin-top: 0;
+        margin-top: 1.5rem;
+        min-height: 12.1875rem;
 
         @include media('<md') {
           font-size:  rem(16px);
