--- a/source/themes/custom/crescenttool/styles/libraries/paragraph/full--content-callout.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/paragraph/full--content-callout.scss
@@ -38,17 +38,30 @@
         left: 50%;
         transform: translate(-50%, -50%);
         width: 100%;
-        padding: rem(20px);
         z-index: 5;
+        display: flex;
+        justify-content: center;
+      }
+
+      .component-content-callout__content-box {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        border: 1px solid $primary-red;
+        border-radius: rem(20px);
+        background-color: $black;
+        padding: rem(10px 25px);
+        min-width: rem(200px);
+        margin: rem(0 10px);
 
         .component-content-callout__title {
           color: $white;
           text-align: center;
           font-size: rem(28px);
-          margin-bottom: rem(30px);
+          margin-bottom: rem(10px);
 
           @include media('>=md') {
-            font-size: rem(32px);
+            font-size: rem(28px);
           }
         }
 
@@ -58,24 +71,20 @@
 
         .field--name-field-link a {
           @include btn(secondary);
-          color: $primary-red;
+          color: $white;
           font-weight: $fw-extra-bold;
-          font-size: rem(24px);
-          border: 1px solid $primary-red;
-          background-color: $black;
+          font-size: rem(16px);
           display: inline-flex;
           justify-content: center;
-          padding: rem(25px) rem(20px);
           flex: auto;
+          padding: unset;
 
-          &:hover {
-            color: $black;
-            border-color: $black;
-            background-color: $primary-red;
+          @include on-event() {
+            color: $primary-red;
           }
 
           @include media('<sm') {
-            padding: rem(25px) rem(20px);
+            padding: unset;
 
             &:after {
               margin-left: .5rem;
@@ -83,9 +92,12 @@
           }
 
           @include media('>=lg-plus') {
-            font-size: rem(32px);
-            padding: rem(35px) rem(30px);
+            font-size: rem(16px);
           }
+        }
+
+        @include media('>=lg-plus') {
+          padding: rem(10px 60px);
         }
       }
 
