changed accordion icon color

--- a/source/themes/custom/crescenttool/styles/libraries/paragraph/full--accordion.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/paragraph/full--accordion.scss
@@ -35,7 +35,7 @@
     border-bottom: 0.125rem solid $gray-70;
 
     &::after {
-      color: $color-black;
+      color: $primary-red;
       transform: rotate(90deg);
       display: inline-block;
       position: absolute;
