--- a/source/themes/custom/gearwrench/styles/libraries/view/new-products.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/view/new-products.scss
@@ -16,9 +16,9 @@
 
 .view-new-products {
   display: grid;
-  gap: 1.5rem;
-  grid-auto-rows: minmax(100px,auto);
-  grid-template-columns: repeat(3,1fr);
+  gap: 1.5rem; // sass-lint:disable-line no-misspelled-properties
+  grid-auto-rows: minmax(100px, auto);
+  grid-template-columns: repeat(3, 1fr);
 
   .view-filters {
     grid-column: 1;
